Warehouse manager and ui started